--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
 @import url(./blocks/popup/_place/popup_place_profile.css);
 @import url(./blocks/popup/_place/popup_place_cards.css);
 @import url(./blocks/popup/_place/popup_place_image.css);
+@import url(./blocks/popup/_place/popup_place_infotooltip.css);
 @import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__form/_place/popup__form_place_card.css);
@@ -80,14 +81,23 @@
 
 
 
+.popop__infotooltip-img {
+    max-width: 120px;
+}
 
-
-
-
-
-
-
-
+.popup__caption {
+    font-family: 'Inter', Arial, sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 1;
+    text-rendering: optimizeLegibility;
+    text-decoration: none;
+    color: #000;
+    width: 100%;
+    padding: 0;
+    margin: 0 0 60px;
+}
 
 
 
