--- a/src/blocks/popup/__caption/popup__caption.css
+++ b/src/blocks/popup/__caption/popup__caption.css
@@ -6,8 +6,8 @@
     line-height: 1;
     text-rendering: optimizeLegibility;
     text-decoration: none;
+    text-align: center;
     color: #000;
-    width: 100%;
     padding: 0;
-    margin: 0 0 60px;
+    margin: 0 auto 23px;
 }
