--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,12 +1,13 @@
 .header__logo {
   width: 142px;
   height: 33px;
-  padding: 0 0 41px;
+  padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 760px) {
   .header__logo {
-    padding: 0 0 31px 27px;
+    padding: 0 0 0 27px;
     width: 104px;
     height: 24px;
   }
