--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
   display: flex;
-  justify-content: flex-start;
-  padding: 45px 0 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 45px 0 41px;
   margin: 0 auto 40px;
   max-width: 880px;
   border-bottom:rgba(84, 84, 84, 0.7) solid 1px;
@@ -24,7 +25,7 @@
 @media screen and (max-width: 760px) {
   .header {
     width: 320px;
-    padding: 28px 0 0;
+    padding: 28px 0 31px 0;
     margin: 0 auto 42px;
   }
 }
