--- a/src/blocks/login/__signup/login__signup.css
+++ b/src/blocks/login/__signup/login__signup.css
@@ -1,13 +1,13 @@
-.header__link {
+.login__signup {
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 1;
     text-rendering: optimizeLegibility;
     text-decoration: none;
     color: #fff;
     padding: 0;
-    cursor: pointer;
-    margin: 0;
+    margin: 15px 0 0;
+    text-align: center;
 }
