--- a/src/index.css
+++ b/src/index.css
@@ -68,14 +68,18 @@
 @import url(./blocks/popup/__caption/popup__caption.css);
 @import url(./blocks/button/button.css);
 @import url(./blocks/login/login.css);
+@import url(./blocks/login/__title/login__title.css);
 @import url(./blocks/login/__form-fieldset/login__form-fieldset.css);
 @import url(./blocks/login/__input-list/login__input-list.css);
 @import url(./blocks/login/__input-item/login__input-item.css);
 @import url(./blocks/login/__input/login__input.css);
 @import url(./blocks/login/__submit-button/login__submit-button.css);
+@import url(./blocks/login/__signup/login__signup.css);
+@import url(./blocks/login/__signup-link/login__signup-link.css);
 @import url(./blocks/link/link.css);
 @import url(./blocks/register/register.css);
 @import url(./blocks/register/__signin/register__signin.css);
+@import url(./blocks/register/__signin-link/register__signin-link.css);
 @import url(./blocks/register/__title/register__title.css);
 @import url(./blocks/register/__form-fieldset/register__form-fieldset.css);
 @import url(./blocks/register/__input-list/register__input-list.css);
